[package]
name = "snax_macros"
description = "Proc macro implementation for the `snax` crate"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/snax_macros"
homepage = "https://github.com/LPGhatguy/snax"
repository = "https://github.com/LPGhatguy/snax.git"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
proc-macro2 = "0.4"
quote = "0.6.11"
snax_syntax  = { path = "../snax_syntax" }
