[package]
name = "snax_syntax"
description = "Implementation of JSX-like syntax for proc macro authors"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/snax_syntax"
homepage = "https://github.com/LPGhatguy/snax"
repository = "https://github.com/LPGhatguy/snax.git"

[dependencies]
proc-macro2 = "0.4"
